--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -29,9 +29,15 @@
         width: 100%;
         color: white;
         margin-bottom: 40px;
-        font-weight: $regular;
-        letter-spacing: 4px;
+        font-weight: $semiBold;
+        letter-spacing: 1px;
+        font-size: 5em;
         font-family: $font-main;
+    }
+    h4 {
+        color: white;
+        font-size: 2em;
+        font-weight: $light;
     }
     .headline {
         margin: 70px auto 0;
@@ -211,6 +217,79 @@ section.how {
             }
             .how-txt {
                 padding-top: 10px;
+            }
+        }
+    }
+}
+
+section.selections {
+    p {
+        font-size: 1.6em;
+        margin-bottom: 20px;
+    }
+    .flex-selections {
+        @include flexbox;
+        @media screen and (max-width: $screen-xs-max) {
+            @include flex-direction(column);
+        }
+        .selection-item {
+            width: calc((100% - 40px) / 3);
+            height: 280px;
+            margin-right: 20px;
+            @include flexbox;
+            @include flex-direction(column);
+            @include align-items(center);
+            @include box-shadow (0 4px 6px $grey2);
+            @media screen and (max-width: $screen-xs-max) {
+                width: 100%;
+                height: 215px;
+                margin-bottom: 20px;
+            }
+            h4 {
+                text-transform: uppercase;
+                font-size: 1.3em;
+                font-weight: $light;
+                margin-top: 20px;
+                text-align: center;
+                @media screen and (max-width: $screen-xs-max) {
+                    margin-top: 10px;
+                    margin-bottom: 5px;
+                }
+            }
+            a {
+                font-size: 1.8em;
+                width: 100%;
+                height: 100%;
+                text-align: center;
+                &:hover {
+                    color: inherit;
+                    text-decoration: none;
+                }
+            }
+            .img {
+                width: 100%;
+                height: 185px;
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;
+                border-bottom: 1px solid $hairfie;
+                @media screen and (max-width: $screen-xs-max) {
+                    height: 140px;
+                }
+                //FIXME : transition
+                // &:hover {
+                //     @include transition(background-size 0.5s ease-out);
+                //     background-size: 250%;
+                // }
+            }
+            .les-bons-plans {
+                background-image: url(../img/selections/les-bons-plans.jpg);
+            }
+            .les-meilleurs-coloristes {
+                background-image: url(../img/selections/les-meilleurs-coloristes.jpg);
+            }
+            .les-barbershops {
+                background-image: url(../img/selections/les-barbershops.jpg);
             }
         }
     }
