--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10998,9 +10998,14 @@ footer.mobile {
     width: 100%;
     color: white;
     margin-bottom: 40px;
-    font-weight: 400;
-    letter-spacing: 4px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    font-size: 5em;
     font-family: "Source Sans Pro", sans-serif; }
+  .landing h4 {
+    color: white;
+    font-size: 2em;
+    font-weight: 200; }
   .landing .headline {
     margin: 70px auto 0;
     float: none !important; }
@@ -11144,6 +11149,87 @@ section.how {
           letter-spacing: 0; }
         section.how .row > div .how-txt {
           padding-top: 10px; } }
+
+section.selections p {
+  font-size: 1.6em;
+  margin-bottom: 20px; }
+
+section.selections .flex-selections {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex; }
+  @media screen and (max-width: 767px) {
+    section.selections .flex-selections {
+      -webkit-box-direction: normal;
+      -webkit-box-orient: vertical;
+      -webkit-flex-direction: column;
+      -moz-flex-direction: column;
+      -ms-flex-direction: column;
+      flex-direction: column; } }
+  section.selections .flex-selections .selection-item {
+    width: calc((100% - 40px) / 3);
+    height: 280px;
+    margin-right: 20px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-direction: normal;
+    -webkit-box-orient: vertical;
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    align-items: center;
+    -webkit-box-shadow: 0 4px 6px #dfdfdf;
+    -moz-box-shadow: 0 4px 6px #dfdfdf;
+    box-shadow: 0 4px 6px #dfdfdf; }
+    @media screen and (max-width: 767px) {
+      section.selections .flex-selections .selection-item {
+        width: 100%;
+        height: 215px;
+        margin-bottom: 20px; } }
+    section.selections .flex-selections .selection-item h4 {
+      text-transform: uppercase;
+      font-size: 1.3em;
+      font-weight: 200;
+      margin-top: 20px;
+      text-align: center; }
+      @media screen and (max-width: 767px) {
+        section.selections .flex-selections .selection-item h4 {
+          margin-top: 10px;
+          margin-bottom: 5px; } }
+    section.selections .flex-selections .selection-item a {
+      font-size: 1.8em;
+      width: 100%;
+      height: 100%;
+      text-align: center; }
+      section.selections .flex-selections .selection-item a:hover {
+        color: inherit;
+        text-decoration: none; }
+    section.selections .flex-selections .selection-item .img {
+      width: 100%;
+      height: 185px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      border-bottom: 1px solid #fe5b5f; }
+      @media screen and (max-width: 767px) {
+        section.selections .flex-selections .selection-item .img {
+          height: 140px; } }
+    section.selections .flex-selections .selection-item .les-bons-plans {
+      background-image: url(../img/selections/les-bons-plans.jpg); }
+    section.selections .flex-selections .selection-item .les-meilleurs-coloristes {
+      background-image: url(../img/selections/les-meilleurs-coloristes.jpg); }
+    section.selections .flex-selections .selection-item .les-barbershops {
+      background-image: url(../img/selections/les-barbershops.jpg); }
 
 section.home-section {
   position: relative; }
