--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10368,7 +10368,7 @@ div.shadow.inactive {
 header {
   position: relative;
   z-index: 20;
-  letter-spacing: 1px; }
+  font-weight: 200; }
   header div.dark-header {
     background-color: #343434;
     height: 35px;
@@ -10377,7 +10377,7 @@ header {
       display: inline-block;
       text-align: start;
       font-size: 1.4em;
-      font-weight: bold; }
+      font-weight: 400; }
       header div.dark-header div.container div a {
         color: white;
         text-decoration: none;
@@ -10512,6 +10512,16 @@ header {
     header:not(.white) .btn-search {
       display: none; }
   header ul.white-header {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    justify-content: center;
     margin: 0;
     z-index: 1; }
     header ul.white-header li {
@@ -10985,7 +10995,7 @@ footer.mobile {
     background-color: rgba(255, 255, 255, 0.2); }
   @media screen and (min-width: 768px) {
     .landing {
-      height: 500px;
+      height: 520px;
       background: url(../img/home/photo-bg.jpg) no-repeat top center;
       background-size: cover; }
       .landing header {
@@ -11005,7 +11015,8 @@ footer.mobile {
   .landing h4 {
     color: white;
     font-size: 2em;
-    font-weight: 200; }
+    font-weight: 200;
+    margin-bottom: 50px; }
   .landing .headline {
     margin: 70px auto 0;
     float: none !important; }
@@ -11196,9 +11207,12 @@ section.selections .flex-selections {
         width: 100%;
         height: 215px;
         margin-bottom: 20px; } }
+    section.selections .flex-selections .selection-item:hover, section.selections .flex-selections .selection-item:active, section.selections .flex-selections .selection-item:focus, section.selections .flex-selections .selection-item:visited {
+      color: inherit;
+      text-decoration: none; }
     section.selections .flex-selections .selection-item h4 {
       text-transform: uppercase;
-      font-size: 1.3em;
+      font-size: 2em;
       font-weight: 200;
       margin-top: 20px;
       text-align: center; }
@@ -11206,14 +11220,11 @@ section.selections .flex-selections {
         section.selections .flex-selections .selection-item h4 {
           margin-top: 10px;
           margin-bottom: 5px; } }
-    section.selections .flex-selections .selection-item a {
+    section.selections .flex-selections .selection-item span {
       font-size: 1.8em;
+      font-weight: 100;
       width: 100%;
-      height: 100%;
       text-align: center; }
-      section.selections .flex-selections .selection-item a:hover {
-        color: inherit;
-        text-decoration: none; }
     section.selections .flex-selections .selection-item .img {
       width: 100%;
       height: 185px;
@@ -11307,7 +11318,8 @@ section.home-section {
   padding: 10px;
   margin: 90px 15px 60px 15px;
   height: 80px;
-  border: 1px solid #c4c4c4; }
+  border: 1px solid #c4c4c4;
+  width: calc(100% - 30px); }
   .landing .main-searchbar > a:nth-child(1), .home-search .main-searchbar > a:nth-child(1) {
     margin-right: 10px; }
   .landing .main-searchbar > div, .home-search .main-searchbar > div {
@@ -11470,7 +11482,8 @@ section.home-search .home-search-desktop li {
     border-top-right-radius: 3px; }
 
 section.home-search .main-searchbar {
-  margin: 0; }
+  margin: 0;
+  margin-left: 15px; }
 
 @media screen and (max-width: 767px) {
   section.home-search {
