--- a/public/scss/partials/_buttons.scss
+++ b/public/scss/partials/_buttons.scss
@@ -63,7 +63,7 @@
     font-family: $font-main;
     font-weight: $regular;
     font-size: 1.6em;
-    letter-spacing: 1px;
+    // letter-spacing: 1px;
 
     @include transition(all 0.3s ease-out);
 
