--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -266,6 +266,7 @@ section.selections {
                 font-weight: 100;
                 width: 100%;
                 text-align: center;
+                text-decoration: underline;
 
             }
             .img {
