--- a/public/scss/partials/_page-resa.scss
+++ b/public/scss/partials/_page-resa.scss
@@ -311,6 +311,7 @@
                 .connect {
                     float: right;
                     line-height: 25px;
+                    text-decoration: underline;
                 }
             }
             .form-group {
