--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12787,7 +12787,6 @@ section.home-search .home-search-mobile {
     margin-top: 5px; }
   #content.search .top-reviews div.title p {
     color: #b0b0b0;
-    text-transform: uppercase;
     font-weight: 400; }
     #content.search .top-reviews div.title p .gender-symbol {
       display: none; }
@@ -12799,6 +12798,8 @@ section.home-search .home-search-mobile {
   #content.search .top-reviews .yelp-date {
     color: #c4c4c4;
     font-size: 1.2em; }
+  #content.search .top-reviews a {
+    text-decoration: underline; }
   #content.search .top-reviews a:hover {
     color: inherit;
     text-decoration: none; }
