--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12073,6 +12073,22 @@ section.home-search .home-search-mobile {
   #content.search .subfilters .filter-line {
     line-height: 40px; }
 
+#content.search .result-top-bar {
+  background-color: #f0f0f1;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  align-items: center;
+  padding: 14px 10px;
+  font-size: 1.6em;
+  font-weight: 400; }
+
 #content.search .main-content .search-content {
   position: relative; }
   #content.search .main-content .search-content:before {
