--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -6,6 +6,13 @@
     header {
         div.dark-header {
             background-color: rgba(255, 255, 255, 0.2);
+            div.container div div.user .dropdown-menu {
+                margin-top: 9px;
+                background-color: rgba(255, 255, 255, 0.2);
+                a:hover {
+                    background-color: $grey;
+                }
+            }
         }
     }
     width: 100vw;
