--- a/public/scss/partials/_select.scss
+++ b/public/scss/partials/_select.scss
@@ -21,7 +21,7 @@
   border: 2px solid #e6e6e6;
   font-family: $font-second;
   font-weight: $latoBold;
-  font-size: 1.4em; letter-spacing: 2px;
+  font-size: 1.4em; 
   color: $grey;
   &:focus {
     outline:0;
@@ -191,7 +191,7 @@
   padding: 8px 10px;
   font-family: $font-second;
   font-weight: $latoBold;
-  font-size: 1.2em; letter-spacing: 2px;
+  font-size: 1.2em; 
   color: $grey;
   text-align: left;
 }
