--- a/public/scss/partials/_page-home.scss
+++ b/public/scss/partials/_page-home.scss
@@ -233,6 +233,8 @@ section.how {
 }
 
 section.selections {
+    padding-top: 20px;
+    padding-bottom: 20px;
     p {
         font-size: 1.6em;
         margin-bottom: 20px;
@@ -249,7 +251,11 @@ section.selections {
             @include flexbox;
             @include flex-direction(column);
             @include align-items(center);
-            @include box-shadow (0 4px 6px $grey2);
+            border: 1px solid $grey5;
+            &:hover {
+                @include transition(all 0.25s ease-out);
+                @include box-shadow (0 2px 4px $grey2);
+            }
             @media screen and (max-width: $screen-xs-max) {
                 width: 100%;
                 height: 215px;
@@ -263,7 +269,8 @@ section.selections {
                 text-transform: uppercase;
                 font-size: 2em;
                 font-weight: $light;
-                margin-top: 20px;
+                margin-top: 25px;
+                margin-bottom: 0;
                 text-align: center;
                 @media screen and (max-width: $screen-xs-max) {
                     margin-top: 10px;
@@ -275,8 +282,7 @@ section.selections {
                 font-weight: 100;
                 width: 100%;
                 text-align: center;
-                text-decoration: underline;
-
+                color: $grey;
             }
             .img {
                 width: 100%;
@@ -320,16 +326,17 @@ section.home-section {
         margin-right: 0;
     }
     h2 {
-        font-family: $font-second;
-        font-weight: $regular;
+        font-family: $font-main;
+        font-weight: $light;
         // letter-spacing: 3px;
         padding: 30px 0 10px;
         margin: 0;
         @media screen and (max-width: $screen-xs-max) {
             font-size: 2.2em;
         }
-        font-size: 2.4em;
+        font-size: 2.5em;
         color: $darkgrey;
+        text-transform: uppercase;
     }
     p.subtitle {
         font-size: 1.6em;
