--- a/public/scss/partials/_page-search.scss
+++ b/public/scss/partials/_page-search.scss
@@ -276,7 +276,7 @@
             }
             h1 {
                 margin: 20px 0;
-                letter-spacing: 2px;
+                letter-spacing: 0;
                 font-weight: $semiBold;
                 font-size: 21px;
                 margin-top:25px;
@@ -290,7 +290,6 @@
             p {
                 font-weight: $light;
                 font-size: 1.4em;
-                letter-spacing: 1px;
                 margin-bottom: 30px;
             }
             div {
@@ -724,6 +723,27 @@
                     margin-top: 5px;
                     display: inline-block;
                 }
+                .btn-selection {
+                    color: $darkgrey;
+                    background-color: white;
+                    border: 1px solid $grey;
+                    font-size: 1.6em;
+                    padding: 5px 10px 5px 35px;
+                    margin: 0px 5px 5px 0;
+                    border-radius: 3px;
+                    display: inline-block;
+                    position: relative;
+                    cursor: pointer;
+                    &:before {
+                        content: ' ';
+                        background: url(../img/search/star.svg) no-repeat center center;
+                        background-size: contain;
+                        width: 18px;
+                        height: 18px;
+                        left: 10px;
+                        position: absolute;
+                    }
+                }
                 .book {
                     bottom: 0px;
                     position: absolute;
@@ -1062,12 +1082,18 @@
             top: 100%;
         }
     }
+    .label-container {
+        @media screen and (max-width: $screen-xs-max) {            
+            padding-left: 10px;
+        }
+    }
     .business-label {
         color: white;
         background-color: $hairfie;
         font-size: 1.6em;
-        padding: 5px 25px 5px 5px;
-        margin: 15px 5px 10px 0;
+        padding: 5px 35px 5px 10px;
+        margin: 0px 5px 5px 0;
+        border-radius: 3px;
         display: inline-block;
         position: relative;
         cursor: pointer;
@@ -1076,12 +1102,7 @@
             font-weight: $light;
             position: absolute;
             top: -3px;
-            right: 5px;
-        }
-    }
-    @media screen and (max-width: $screen-xs-max){
-        .business-label:first-child {
-            margin-left: 10px;
+            right: 10px;
         }
     }
     .top-reviews {
