--- a/public/scss/partials/_page-resa.scss
+++ b/public/scss/partials/_page-resa.scss
@@ -42,7 +42,7 @@
                 padding-left: 10px;
                 float: left;
                 width: calc(100% - 55px);
-                h2 > a {
+                h2 > span {
                     font-size: 1.2em;
                     text-transform: none;
                     letter-spacing: 0;
