--- a/public/scss/partials/_page-salon.scss
+++ b/public/scss/partials/_page-salon.scss
@@ -371,11 +371,24 @@
             }
 
             hr {
-                margin-top: -15px;
-                margin-bottom: 20px;
+                margin: -15px 0 5px 0;
                 border: 0;
                 border-top: 1px dashed #777777;
                 width: calc(100vw - 30px);
+            }
+
+            .btn-book.btn-book-inside {
+                width: calc(100vw - 30px);
+                margin-bottom: 20px;
+                margin-top: 20px;
+                margin-bottom: 25px;
+                text-transform: uppercase;
+                font-weight: 400;
+                border-radius: 0;
+                height: 50px;
+                line-height: 40px;
+                font-size: 1.8em;
+                letter-spacing: 0.5px;
             }
         }
     }
