--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -58,6 +58,7 @@ body {
 @import "partials/emailModal";
 @import "partials/page-write-review";
 @import "partials/page-newsletter";
+@import "partials/page-sms";
 
 //Bastien CSS work
 @import "partials/auth-form";
