--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15592,7 +15592,7 @@ section.home-search .home-search-mobile {
 #content.sms {
   background-color: white;
   margin-top: 55px;
-  padding: 5% 10% 5% 10%;
+  padding: 5% 0% 5% 0%;
   margin-bottom: 10%; }
   #content.sms .flex-container {
     display: -webkit-box;
@@ -15606,12 +15606,32 @@ section.home-search .home-search-mobile {
     -moz-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    align-items: center;
     text-align: center; }
   #content.sms h3 {
-    color: #fe5b5f; }
+    color: #fe5b5f;
+    letter-spacing: 0; }
+    @media screen and (max-width: 320px) {
+      #content.sms h3 {
+        margin-top: 0; } }
+  #content.sms .hr {
+    width: 20px;
+    margin-top: 0;
+    margin-bottom: 0; }
   #content.sms p {
-    font-size: 1.9em;
+    font-size: 1.6em;
+    margin-top: 20px;
     font-family: "Lato", sans-serif; }
+    @media screen and (max-width: 320px) {
+      #content.sms p {
+        font-size: 1.3em; } }
+  #content.sms .btn-book {
+    width: 150px;
+    margin-top: 20px; }
 
 .connect-form {
   border: 1px solid #dfdfdf;
