--- a/public/scss/partials/_page-sms.scss
+++ b/public/scss/partials/_page-sms.scss
@@ -5,18 +5,36 @@
 #content.sms {
     background-color: white;
     margin-top: 55px;
-    padding: 5% 10% 5% 10%;
+    padding: 5% 0% 5% 0%;
     margin-bottom: 10%;
     .flex-container {
         @include flexbox;
         @include flex-direction(column);
+        @include align-items(center);
         text-align: center;
     }
     h3 {
         color: $hairfie;
+        letter-spacing: 0;
+        @media screen and (max-width: 320px) {
+            margin-top: 0;
+        }
+    }
+    .hr {
+        width: 20px;
+        margin-top: 0;
+        margin-bottom: 0;
     }
     p {
-        font-size: 1.9em;
+        font-size: 1.6em;
+        margin-top: 20px;
         font-family: $font-second;
+        @media screen and (max-width: 320px) {
+            font-size: 1.3em;
+        }
+    }
+    .btn-book {
+        width: 150px;
+        margin-top: 20px;
     }
 }
