--- a/public/scss/partials/_page-write-review.scss
+++ b/public/scss/partials/_page-write-review.scss
@@ -1,4 +1,5 @@
-.container.write-review {
+#content.container.write-review {
+    background-color: white;
     margin-top: 65px;
     font-size: 1.3em;
     form.form {
